// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`appeal-details GET /enter-start-date should render the 404 error page if an appeal with a matching appealId does not exist 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <h1 class=\\"govuk-heading-xl\\">Page not found</h1>
            <p class=\\"govuk-body\\">If you typed the web address, check it is correct.</p>
            <p class=\\"govuk-body\\">If you pasted the web address, check you copied the entire address.</p>
            <p             class=\\"govuk-body\\"><a href=\\"https://has-appeal.herokuapp.com/help/contact\\" class=\\"govuk-link\\">Contact the Planning Inspectorate Customer Support</a> if
                the problem persists</p>
        </div>
    </div>
</main>"
`;

exports[`appeal-details GET /enter-start-date should render the enter start date page if an appeal with a matching appealId exists 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class=\\"govuk-grid-row\\">
                <div class=\\"govuk-grid-column-full\\"><span class=\\"govuk-caption-l govuk-!-margin-bottom-3\\">351062</span>
                </div>
            </div>
            <form method=\\"post\\" novalidate=\\"novalidate\\">
                <div class=\\"govuk-form-group\\">
                    <fieldset class=\\"govuk-fieldset\\" role=\\"group\\" aria-describedby=\\"start-date-hint\\">
                        <legend class=\\"govuk-fieldset__legend govuk-fieldset__legend--l\\">
                            <h1 class=\\"govuk-fieldset__heading\\"> Enter the case start date</h1>
                        </legend>
                        <div id=\\"start-date-hint\\" class=\\"govuk-hint\\">For example, 27 3 2023</div>
                        <div class=\\"govuk-date-input\\" id=\\"start-date\\">
                            <div class=\\"govuk-date-input__item\\">
                                <div class=\\"govuk-form-group\\">
                                    <label class=\\"govuk-label govuk-date-input__label\\" for=\\"start-date-day\\">Day</label>
                                    <input class=\\"govuk-input govuk-date-input__input govuk-input--width-2\\"
                                    id=\\"start-date-day\\" name=\\"start-date-day\\" type=\\"text\\" inputmode=\\"numeric\\">
                                </div>
                            </div>
                            <div class=\\"govuk-date-input__item\\">
                                <div class=\\"govuk-form-group\\">
                                    <label class=\\"govuk-label govuk-date-input__label\\" for=\\"start-date-month\\">Month</label>
                                    <input class=\\"govuk-input govuk-date-input__input govuk-input--width-2\\"
                                    id=\\"start-date-month\\" name=\\"start-date-month\\" type=\\"text\\" inputmode=\\"numeric\\">
                                </div>
                            </div>
                            <div class=\\"govuk-date-input__item\\">
                                <div class=\\"govuk-form-group\\">
                                    <label class=\\"govuk-label govuk-date-input__label\\" for=\\"start-date-year\\">Year</label>
                                    <input class=\\"govuk-input govuk-date-input__input govuk-input--width-4\\"
                                    id=\\"start-date-year\\" name=\\"start-date-year\\" type=\\"text\\" inputmode=\\"numeric\\">
                                </div>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <div class=\\"govuk-inset-text govuk-!-margin-top-0\\">Entering the start date will create the case timetable and publish the
                    appeal on the Appeals Casework Portal</div>
                <button type=\\"submit\\" class=\\"govuk-button\\"
                data-module=\\"govuk-button\\">Save and continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`appeal-details POST /enter-start-date should re-render the enter start date page in an error state if errors are present and an appeal with a matching appealId exists 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class=\\"govuk-error-summary\\" aria-labelledby=\\"error-summary-title\\"
            role=\\"alert\\" data-module=\\"govuk-error-summary\\">
                <h2 class=\\"govuk-error-summary__title\\" id=\\"error-summary-title\\"> There is a problem</h2>
                <div class=\\"govuk-error-summary__body\\">
                    <ul class=\\"govuk-list govuk-error-summary__list\\">
                        <li><a href=\\"#start-date-day\\">Day must be a number</a>
                        </li>
                        <li><a href=\\"#start-date-month\\">Month must be a number</a>
                        </li>
                        <li><a href=\\"#start-date-year\\">Year must be a number</a>
                        </li>
                    </ul>
                </div>
            </div>
            <div class=\\"govuk-grid-row\\">
                <div class=\\"govuk-grid-column-full\\"><span class=\\"govuk-caption-l govuk-!-margin-bottom-3\\">351062</span>
                </div>
            </div>
            <form method=\\"post\\" novalidate=\\"novalidate\\">
                <div class=\\"govuk-form-group\\">
                    <fieldset class=\\"govuk-fieldset\\" role=\\"group\\" aria-describedby=\\"start-date-hint\\">
                        <legend class=\\"govuk-fieldset__legend govuk-fieldset__legend--l\\">
                            <h1 class=\\"govuk-fieldset__heading\\"> Enter the case start date</h1>
                        </legend>
                        <div id=\\"start-date-hint\\" class=\\"govuk-hint\\">For example, 27 3 2023</div>
                        <div class=\\"govuk-date-input\\" id=\\"start-date\\">
                            <div class=\\"govuk-date-input__item\\">
                                <div class=\\"govuk-form-group\\">
                                    <label class=\\"govuk-label govuk-date-input__label\\" for=\\"start-date-day\\">Day</label>
                                    <input class=\\"govuk-input govuk-date-input__input govuk-input--width-2\\"
                                    id=\\"start-date-day\\" name=\\"start-date-day\\" type=\\"text\\" inputmode=\\"numeric\\">
                                </div>
                            </div>
                            <div class=\\"govuk-date-input__item\\">
                                <div class=\\"govuk-form-group\\">
                                    <label class=\\"govuk-label govuk-date-input__label\\" for=\\"start-date-month\\">Month</label>
                                    <input class=\\"govuk-input govuk-date-input__input govuk-input--width-2\\"
                                    id=\\"start-date-month\\" name=\\"start-date-month\\" type=\\"text\\" inputmode=\\"numeric\\">
                                </div>
                            </div>
                            <div class=\\"govuk-date-input__item\\">
                                <div class=\\"govuk-form-group\\">
                                    <label class=\\"govuk-label govuk-date-input__label\\" for=\\"start-date-year\\">Year</label>
                                    <input class=\\"govuk-input govuk-date-input__input govuk-input--width-4\\"
                                    id=\\"start-date-year\\" name=\\"start-date-year\\" type=\\"text\\" inputmode=\\"numeric\\">
                                </div>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <div class=\\"govuk-inset-text govuk-!-margin-top-0\\">Entering the start date will create the case timetable and publish the
                    appeal on the Appeals Casework Portal</div>
                <button type=\\"submit\\" class=\\"govuk-button\\"
                data-module=\\"govuk-button\\">Save and continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`appeal-details POST /enter-start-date should re-render the enter start date page with the expected error message if the entered day is greater than 31 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class=\\"govuk-error-summary\\" aria-labelledby=\\"error-summary-title\\"
            role=\\"alert\\" data-module=\\"govuk-error-summary\\">
                <h2 class=\\"govuk-error-summary__title\\" id=\\"error-summary-title\\"> There is a problem</h2>
                <div class=\\"govuk-error-summary__body\\">
                    <ul class=\\"govuk-list govuk-error-summary__list\\">
                        <li><a href=\\"#start-date-day\\">Day must be a number</a>
                        </li>
                        <li><a href=\\"#start-date-month\\">Month must be a number</a>
                        </li>
                        <li><a href=\\"#start-date-year\\">Year must be a number</a>
                        </li>
                    </ul>
                </div>
            </div>
            <div class=\\"govuk-grid-row\\">
                <div class=\\"govuk-grid-column-full\\"><span class=\\"govuk-caption-l govuk-!-margin-bottom-3\\">351062</span>
                </div>
            </div>
            <form method=\\"post\\" novalidate=\\"novalidate\\">
                <div class=\\"govuk-form-group\\">
                    <fieldset class=\\"govuk-fieldset\\" role=\\"group\\" aria-describedby=\\"start-date-hint\\">
                        <legend class=\\"govuk-fieldset__legend govuk-fieldset__legend--l\\">
                            <h1 class=\\"govuk-fieldset__heading\\"> Enter the case start date</h1>
                        </legend>
                        <div id=\\"start-date-hint\\" class=\\"govuk-hint\\">For example, 27 3 2023</div>
                        <div class=\\"govuk-date-input\\" id=\\"start-date\\">
                            <div class=\\"govuk-date-input__item\\">
                                <div class=\\"govuk-form-group\\">
                                    <label class=\\"govuk-label govuk-date-input__label\\" for=\\"start-date-day\\">Day</label>
                                    <input class=\\"govuk-input govuk-date-input__input govuk-input--width-2\\"
                                    id=\\"start-date-day\\" name=\\"start-date-day\\" type=\\"text\\" inputmode=\\"numeric\\">
                                </div>
                            </div>
                            <div class=\\"govuk-date-input__item\\">
                                <div class=\\"govuk-form-group\\">
                                    <label class=\\"govuk-label govuk-date-input__label\\" for=\\"start-date-month\\">Month</label>
                                    <input class=\\"govuk-input govuk-date-input__input govuk-input--width-2\\"
                                    id=\\"start-date-month\\" name=\\"start-date-month\\" type=\\"text\\" inputmode=\\"numeric\\">
                                </div>
                            </div>
                            <div class=\\"govuk-date-input__item\\">
                                <div class=\\"govuk-form-group\\">
                                    <label class=\\"govuk-label govuk-date-input__label\\" for=\\"start-date-year\\">Year</label>
                                    <input class=\\"govuk-input govuk-date-input__input govuk-input--width-4\\"
                                    id=\\"start-date-year\\" name=\\"start-date-year\\" type=\\"text\\" inputmode=\\"numeric\\">
                                </div>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <div class=\\"govuk-inset-text govuk-!-margin-top-0\\">Entering the start date will create the case timetable and publish the
                    appeal on the Appeals Casework Portal</div>
                <button type=\\"submit\\" class=\\"govuk-button\\"
                data-module=\\"govuk-button\\">Save and continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`appeal-details POST /enter-start-date should re-render the enter start date page with the expected error message if the entered day is less than 1 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class=\\"govuk-error-summary\\" aria-labelledby=\\"error-summary-title\\"
            role=\\"alert\\" data-module=\\"govuk-error-summary\\">
                <h2 class=\\"govuk-error-summary__title\\" id=\\"error-summary-title\\"> There is a problem</h2>
                <div class=\\"govuk-error-summary__body\\">
                    <ul class=\\"govuk-list govuk-error-summary__list\\">
                        <li><a href=\\"#start-date-day\\">Day must be a number</a>
                        </li>
                        <li><a href=\\"#start-date-month\\">Month must be a number</a>
                        </li>
                        <li><a href=\\"#start-date-year\\">Year must be a number</a>
                        </li>
                    </ul>
                </div>
            </div>
            <div class=\\"govuk-grid-row\\">
                <div class=\\"govuk-grid-column-full\\"><span class=\\"govuk-caption-l govuk-!-margin-bottom-3\\">351062</span>
                </div>
            </div>
            <form method=\\"post\\" novalidate=\\"novalidate\\">
                <div class=\\"govuk-form-group\\">
                    <fieldset class=\\"govuk-fieldset\\" role=\\"group\\" aria-describedby=\\"start-date-hint\\">
                        <legend class=\\"govuk-fieldset__legend govuk-fieldset__legend--l\\">
                            <h1 class=\\"govuk-fieldset__heading\\"> Enter the case start date</h1>
                        </legend>
                        <div id=\\"start-date-hint\\" class=\\"govuk-hint\\">For example, 27 3 2023</div>
                        <div class=\\"govuk-date-input\\" id=\\"start-date\\">
                            <div class=\\"govuk-date-input__item\\">
                                <div class=\\"govuk-form-group\\">
                                    <label class=\\"govuk-label govuk-date-input__label\\" for=\\"start-date-day\\">Day</label>
                                    <input class=\\"govuk-input govuk-date-input__input govuk-input--width-2\\"
                                    id=\\"start-date-day\\" name=\\"start-date-day\\" type=\\"text\\" inputmode=\\"numeric\\">
                                </div>
                            </div>
                            <div class=\\"govuk-date-input__item\\">
                                <div class=\\"govuk-form-group\\">
                                    <label class=\\"govuk-label govuk-date-input__label\\" for=\\"start-date-month\\">Month</label>
                                    <input class=\\"govuk-input govuk-date-input__input govuk-input--width-2\\"
                                    id=\\"start-date-month\\" name=\\"start-date-month\\" type=\\"text\\" inputmode=\\"numeric\\">
                                </div>
                            </div>
                            <div class=\\"govuk-date-input__item\\">
                                <div class=\\"govuk-form-group\\">
                                    <label class=\\"govuk-label govuk-date-input__label\\" for=\\"start-date-year\\">Year</label>
                                    <input class=\\"govuk-input govuk-date-input__input govuk-input--width-4\\"
                                    id=\\"start-date-year\\" name=\\"start-date-year\\" type=\\"text\\" inputmode=\\"numeric\\">
                                </div>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <div class=\\"govuk-inset-text govuk-!-margin-top-0\\">Entering the start date will create the case timetable and publish the
                    appeal on the Appeals Casework Portal</div>
                <button type=\\"submit\\" class=\\"govuk-button\\"
                data-module=\\"govuk-button\\">Save and continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`appeal-details POST /enter-start-date should re-render the enter start date page with the expected error message if the entered day is longer than 2 characters 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class=\\"govuk-error-summary\\" aria-labelledby=\\"error-summary-title\\"
            role=\\"alert\\" data-module=\\"govuk-error-summary\\">
                <h2 class=\\"govuk-error-summary__title\\" id=\\"error-summary-title\\"> There is a problem</h2>
                <div class=\\"govuk-error-summary__body\\">
                    <ul class=\\"govuk-list govuk-error-summary__list\\">
                        <li><a href=\\"#start-date-day\\">Day must be a number</a>
                        </li>
                        <li><a href=\\"#start-date-month\\">Month must be a number</a>
                        </li>
                        <li><a href=\\"#start-date-year\\">Year must be a number</a>
                        </li>
                    </ul>
                </div>
            </div>
            <div class=\\"govuk-grid-row\\">
                <div class=\\"govuk-grid-column-full\\"><span class=\\"govuk-caption-l govuk-!-margin-bottom-3\\">351062</span>
                </div>
            </div>
            <form method=\\"post\\" novalidate=\\"novalidate\\">
                <div class=\\"govuk-form-group\\">
                    <fieldset class=\\"govuk-fieldset\\" role=\\"group\\" aria-describedby=\\"start-date-hint\\">
                        <legend class=\\"govuk-fieldset__legend govuk-fieldset__legend--l\\">
                            <h1 class=\\"govuk-fieldset__heading\\"> Enter the case start date</h1>
                        </legend>
                        <div id=\\"start-date-hint\\" class=\\"govuk-hint\\">For example, 27 3 2023</div>
                        <div class=\\"govuk-date-input\\" id=\\"start-date\\">
                            <div class=\\"govuk-date-input__item\\">
                                <div class=\\"govuk-form-group\\">
                                    <label class=\\"govuk-label govuk-date-input__label\\" for=\\"start-date-day\\">Day</label>
                                    <input class=\\"govuk-input govuk-date-input__input govuk-input--width-2\\"
                                    id=\\"start-date-day\\" name=\\"start-date-day\\" type=\\"text\\" inputmode=\\"numeric\\">
                                </div>
                            </div>
                            <div class=\\"govuk-date-input__item\\">
                                <div class=\\"govuk-form-group\\">
                                    <label class=\\"govuk-label govuk-date-input__label\\" for=\\"start-date-month\\">Month</label>
                                    <input class=\\"govuk-input govuk-date-input__input govuk-input--width-2\\"
                                    id=\\"start-date-month\\" name=\\"start-date-month\\" type=\\"text\\" inputmode=\\"numeric\\">
                                </div>
                            </div>
                            <div class=\\"govuk-date-input__item\\">
                                <div class=\\"govuk-form-group\\">
                                    <label class=\\"govuk-label govuk-date-input__label\\" for=\\"start-date-year\\">Year</label>
                                    <input class=\\"govuk-input govuk-date-input__input govuk-input--width-4\\"
                                    id=\\"start-date-year\\" name=\\"start-date-year\\" type=\\"text\\" inputmode=\\"numeric\\">
                                </div>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <div class=\\"govuk-inset-text govuk-!-margin-top-0\\">Entering the start date will create the case timetable and publish the
                    appeal on the Appeals Casework Portal</div>
                <button type=\\"submit\\" class=\\"govuk-button\\"
                data-module=\\"govuk-button\\">Save and continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`appeal-details POST /enter-start-date should re-render the enter start date page with the expected error message if the entered day is not an integer 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class=\\"govuk-error-summary\\" aria-labelledby=\\"error-summary-title\\"
            role=\\"alert\\" data-module=\\"govuk-error-summary\\">
                <h2 class=\\"govuk-error-summary__title\\" id=\\"error-summary-title\\"> There is a problem</h2>
                <div class=\\"govuk-error-summary__body\\">
                    <ul class=\\"govuk-list govuk-error-summary__list\\">
                        <li><a href=\\"#start-date-day\\">Day must be a number</a>
                        </li>
                        <li><a href=\\"#start-date-month\\">Month must be a number</a>
                        </li>
                        <li><a href=\\"#start-date-year\\">Year must be a number</a>
                        </li>
                    </ul>
                </div>
            </div>
            <div class=\\"govuk-grid-row\\">
                <div class=\\"govuk-grid-column-full\\"><span class=\\"govuk-caption-l govuk-!-margin-bottom-3\\">351062</span>
                </div>
            </div>
            <form method=\\"post\\" novalidate=\\"novalidate\\">
                <div class=\\"govuk-form-group\\">
                    <fieldset class=\\"govuk-fieldset\\" role=\\"group\\" aria-describedby=\\"start-date-hint\\">
                        <legend class=\\"govuk-fieldset__legend govuk-fieldset__legend--l\\">
                            <h1 class=\\"govuk-fieldset__heading\\"> Enter the case start date</h1>
                        </legend>
                        <div id=\\"start-date-hint\\" class=\\"govuk-hint\\">For example, 27 3 2023</div>
                        <div class=\\"govuk-date-input\\" id=\\"start-date\\">
                            <div class=\\"govuk-date-input__item\\">
                                <div class=\\"govuk-form-group\\">
                                    <label class=\\"govuk-label govuk-date-input__label\\" for=\\"start-date-day\\">Day</label>
                                    <input class=\\"govuk-input govuk-date-input__input govuk-input--width-2\\"
                                    id=\\"start-date-day\\" name=\\"start-date-day\\" type=\\"text\\" inputmode=\\"numeric\\">
                                </div>
                            </div>
                            <div class=\\"govuk-date-input__item\\">
                                <div class=\\"govuk-form-group\\">
                                    <label class=\\"govuk-label govuk-date-input__label\\" for=\\"start-date-month\\">Month</label>
                                    <input class=\\"govuk-input govuk-date-input__input govuk-input--width-2\\"
                                    id=\\"start-date-month\\" name=\\"start-date-month\\" type=\\"text\\" inputmode=\\"numeric\\">
                                </div>
                            </div>
                            <div class=\\"govuk-date-input__item\\">
                                <div class=\\"govuk-form-group\\">
                                    <label class=\\"govuk-label govuk-date-input__label\\" for=\\"start-date-year\\">Year</label>
                                    <input class=\\"govuk-input govuk-date-input__input govuk-input--width-4\\"
                                    id=\\"start-date-year\\" name=\\"start-date-year\\" type=\\"text\\" inputmode=\\"numeric\\">
                                </div>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <div class=\\"govuk-inset-text govuk-!-margin-top-0\\">Entering the start date will create the case timetable and publish the
                    appeal on the Appeals Casework Portal</div>
                <button type=\\"submit\\" class=\\"govuk-button\\"
                data-module=\\"govuk-button\\">Save and continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`appeal-details POST /enter-start-date should re-render the enter start date page with the expected error message if the entered day is shorter than 1 character 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class=\\"govuk-error-summary\\" aria-labelledby=\\"error-summary-title\\"
            role=\\"alert\\" data-module=\\"govuk-error-summary\\">
                <h2 class=\\"govuk-error-summary__title\\" id=\\"error-summary-title\\"> There is a problem</h2>
                <div class=\\"govuk-error-summary__body\\">
                    <ul class=\\"govuk-list govuk-error-summary__list\\">
                        <li><a href=\\"#start-date-day\\">Day must be a number</a>
                        </li>
                        <li><a href=\\"#start-date-month\\">Month must be a number</a>
                        </li>
                        <li><a href=\\"#start-date-year\\">Year must be a number</a>
                        </li>
                    </ul>
                </div>
            </div>
            <div class=\\"govuk-grid-row\\">
                <div class=\\"govuk-grid-column-full\\"><span class=\\"govuk-caption-l govuk-!-margin-bottom-3\\">351062</span>
                </div>
            </div>
            <form method=\\"post\\" novalidate=\\"novalidate\\">
                <div class=\\"govuk-form-group\\">
                    <fieldset class=\\"govuk-fieldset\\" role=\\"group\\" aria-describedby=\\"start-date-hint\\">
                        <legend class=\\"govuk-fieldset__legend govuk-fieldset__legend--l\\">
                            <h1 class=\\"govuk-fieldset__heading\\"> Enter the case start date</h1>
                        </legend>
                        <div id=\\"start-date-hint\\" class=\\"govuk-hint\\">For example, 27 3 2023</div>
                        <div class=\\"govuk-date-input\\" id=\\"start-date\\">
                            <div class=\\"govuk-date-input__item\\">
                                <div class=\\"govuk-form-group\\">
                                    <label class=\\"govuk-label govuk-date-input__label\\" for=\\"start-date-day\\">Day</label>
                                    <input class=\\"govuk-input govuk-date-input__input govuk-input--width-2\\"
                                    id=\\"start-date-day\\" name=\\"start-date-day\\" type=\\"text\\" inputmode=\\"numeric\\">
                                </div>
                            </div>
                            <div class=\\"govuk-date-input__item\\">
                                <div class=\\"govuk-form-group\\">
                                    <label class=\\"govuk-label govuk-date-input__label\\" for=\\"start-date-month\\">Month</label>
                                    <input class=\\"govuk-input govuk-date-input__input govuk-input--width-2\\"
                                    id=\\"start-date-month\\" name=\\"start-date-month\\" type=\\"text\\" inputmode=\\"numeric\\">
                                </div>
                            </div>
                            <div class=\\"govuk-date-input__item\\">
                                <div class=\\"govuk-form-group\\">
                                    <label class=\\"govuk-label govuk-date-input__label\\" for=\\"start-date-year\\">Year</label>
                                    <input class=\\"govuk-input govuk-date-input__input govuk-input--width-4\\"
                                    id=\\"start-date-year\\" name=\\"start-date-year\\" type=\\"text\\" inputmode=\\"numeric\\">
                                </div>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <div class=\\"govuk-inset-text govuk-!-margin-top-0\\">Entering the start date will create the case timetable and publish the
                    appeal on the Appeals Casework Portal</div>
                <button type=\\"submit\\" class=\\"govuk-button\\"
                data-module=\\"govuk-button\\">Save and continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`appeal-details POST /enter-start-date should redirect to the start-date-entered page if no errors are present and an appeal with a matching appealId exists and the service method to set the appeal start date was called successfully 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class=\\"govuk-error-summary\\" aria-labelledby=\\"error-summary-title\\"
            role=\\"alert\\" data-module=\\"govuk-error-summary\\">
                <h2 class=\\"govuk-error-summary__title\\" id=\\"error-summary-title\\"> There is a problem</h2>
                <div class=\\"govuk-error-summary__body\\">
                    <ul class=\\"govuk-list govuk-error-summary__list\\">
                        <li><a href=\\"#start-date-day\\">Day must be a number</a>
                        </li>
                        <li><a href=\\"#start-date-month\\">Month must be a number</a>
                        </li>
                        <li><a href=\\"#start-date-year\\">Year must be a number</a>
                        </li>
                    </ul>
                </div>
            </div>
            <div class=\\"govuk-grid-row\\">
                <div class=\\"govuk-grid-column-full\\"><span class=\\"govuk-caption-l govuk-!-margin-bottom-3\\">351062</span>
                </div>
            </div>
            <form method=\\"post\\" novalidate=\\"novalidate\\">
                <div class=\\"govuk-form-group\\">
                    <fieldset class=\\"govuk-fieldset\\" role=\\"group\\" aria-describedby=\\"start-date-hint\\">
                        <legend class=\\"govuk-fieldset__legend govuk-fieldset__legend--l\\">
                            <h1 class=\\"govuk-fieldset__heading\\"> Enter the case start date</h1>
                        </legend>
                        <div id=\\"start-date-hint\\" class=\\"govuk-hint\\">For example, 27 3 2023</div>
                        <div class=\\"govuk-date-input\\" id=\\"start-date\\">
                            <div class=\\"govuk-date-input__item\\">
                                <div class=\\"govuk-form-group\\">
                                    <label class=\\"govuk-label govuk-date-input__label\\" for=\\"start-date-day\\">Day</label>
                                    <input class=\\"govuk-input govuk-date-input__input govuk-input--width-2\\"
                                    id=\\"start-date-day\\" name=\\"start-date-day\\" type=\\"text\\" inputmode=\\"numeric\\">
                                </div>
                            </div>
                            <div class=\\"govuk-date-input__item\\">
                                <div class=\\"govuk-form-group\\">
                                    <label class=\\"govuk-label govuk-date-input__label\\" for=\\"start-date-month\\">Month</label>
                                    <input class=\\"govuk-input govuk-date-input__input govuk-input--width-2\\"
                                    id=\\"start-date-month\\" name=\\"start-date-month\\" type=\\"text\\" inputmode=\\"numeric\\">
                                </div>
                            </div>
                            <div class=\\"govuk-date-input__item\\">
                                <div class=\\"govuk-form-group\\">
                                    <label class=\\"govuk-label govuk-date-input__label\\" for=\\"start-date-year\\">Year</label>
                                    <input class=\\"govuk-input govuk-date-input__input govuk-input--width-4\\"
                                    id=\\"start-date-year\\" name=\\"start-date-year\\" type=\\"text\\" inputmode=\\"numeric\\">
                                </div>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <div class=\\"govuk-inset-text govuk-!-margin-top-0\\">Entering the start date will create the case timetable and publish the
                    appeal on the Appeals Casework Portal</div>
                <button type=\\"submit\\" class=\\"govuk-button\\"
                data-module=\\"govuk-button\\">Save and continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`appeal-details POST /enter-start-date should render the 500 error page if errors are present and an appeal with a matching appealId does not exist 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <h1 class=\\"govuk-heading-xl\\">Sorry, there is a problem with the service</h1>
            <p class=\\"govuk-body\\">Try again later.</p>
            <p class=\\"govuk-body\\"><a href=\\"https://has-appeal.herokuapp.com/help/contact\\" class=\\"govuk-link\\">Contact the Planning Inspectorate Customer Support</a> if
                the problem persists.</p>
        </div>
    </div>
</main>"
`;
